grammar.txt
expression -> literal | unary | binary | ternary | grouping;

literal -> NUM | STR | "true" | "false" | "null";

unary -> ("-" | "!") expression | expression ("++" | "--");

binary -> expression operator expression;

ternary -> expression "?" expression ":" expression;

operator -> "==" | "!=" | ">" | ">=" | "<" | "<=" | "+" | "+=" | "-" | "-=" | "/" | "/=" | "*" | "*=" | "%" | "%=";

---------

expression -> equality
equality -> comparison ( ( "==" | "!=" ) comparison )*
comparison -> term ( ( ">" | ">=" | "<" | "<=" ) term )*
term -> factor ( ( "+" | "-" ) factor )*
factor -> unary ( ( "/" | "*" ) unary )*
unary -> ( "!" | "-" ) unary | primary ("++" | "--") | primary
primary -> NUM | STR | "true" | "false" | "null" | "(" expression ")"
